# TuringPatterns

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReadMe.txt  TuringPatterns.cpp  TuringPatterns.sln  TuringPatterns.vcxproj  TuringPatterns.vcxproj.filters  bacteria.csv  bacteria2.csv  br.csv  br_dots.csv  cnpy.cpp  cnpy.h  coral.csv  lines.csv  patternRunner.py  plotter.py  results1D.csv  results2D.csv  stdafx.cpp  stdafx.h  stripes.csv
CudaKernels/: BufferInitializer.cu  BufferInitializer.cuh  Common.cuh  CuBlasWrapper.cu  CuBlasWrapper.cuh  CudaKernels.vcxproj  CudaKernels.vcxproj.filters  DeviceManager.cu  DeviceManager.cuh  FiniteDifference.cu  FiniteDifference.cuh  Flags.cuh  MemoryBuffer.cu  MemoryBuffer.cuh  Types.h
CudaManager/: Common.h  CudaManager.vcxproj  CudaManager.vcxproj.filters  DeviceManager.cpp  DeviceManager.h  DeviceManagerHelper.cpp  DeviceManagerHelper.h  Matrix.cpp  Matrix.h  ReadMe.txt  Tensor.cpp  Tensor.h  Vector.cpp  Vector.h  stdafx.cpp  stdafx.h
FiniteDifference/: Common.h  FiniteDifference.vcxproj  FiniteDifference.vcxproj.filters  Parabolic.cpp  Parabolic.h  Pattern.cpp  Pattern.h  ReadMe.txt  stdafx.cpp
TuringPatternKernels/: PatternDynamic.cu  PatternDynamic.cuh  PatternType.h  TuringPatternKernels.vcxproj
TuringPatterns/: TuringPatterns.vcxproj  main.cu
